# rust_rmq

./: Cargo.toml  build.rs
src/: main.rs
